--- a/api-gateway/requirements.txt
+++ b/api-gateway/requirements.txt
@@ -1,3 +1,9 @@
 flask==2.0.1
-flask-cors==3.0.10
+werkzeug==2.0.3
 requests==2.26.0
+flask-cors==3.0.10
+python-dotenv==0.19.0
+pymysql==1.0.2
+sqlalchemy==1.4.46
+flask-sqlalchemy==2.5.1
+cryptography==37.0.4
