--- a/auth-service/requirements.txt
+++ b/auth-service/requirements.txt
@@ -1,6 +1,7 @@
 flask==2.0.1
+werkzeug==2.0.3
 flask-sqlalchemy==2.5.1
+sqlalchemy==1.4.46
 pymysql==1.0.2
 python-dotenv==0.19.0
 pyjwt==2.1.0
-werkzeug==2.0.1
