--- a/frontend-service/package.json
+++ b/frontend-service/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-router-dom": "^6.0.2",
+    "react-scripts": "4.0.3",
+    "socket.io-client": "^4.5.1",
+    "xterm": "^4.19.0",
+    "xterm-addon-fit": "^0.5.0",
+    "react-markdown": "^8.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,5 +31,6 @@
       "last 1 safari version"
     ]
   }
+  
 }
 
