--- a/frontend-service/package.json
+++ b/frontend-service/package.json
@@ -11,7 +11,8 @@
     "socket.io-client": "^4.5.1",
     "xterm": "^4.19.0",
     "xterm-addon-fit": "^0.5.0",
-    "react-markdown": "^8.0.3"
+    "react-markdown": "^8.0.3",
+    "@babel/core": "^7.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
